<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Page1">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="538dp"
            android:background="#FFFFFF"
            android:src="@drawable/friendscut"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/button1"
            android:text="@string/button_friendship"
            app:layout_constraintBottom_toTopOf="@+id/button3"
            app:layout_constraintEnd_toStartOf="@+id/button2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/button_style" />

        <Button
            android:id="@+id/button2"
            style="@style/button_style"
            android:layout_width="132dp"
            android:layout_height="91dp"
            android:text="@string/btn_self"
            app:layout_constraintBottom_toTopOf="@+id/button4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button1"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button3"
            style="@style/button_style"
            android:layout_width="132dp"
            android:layout_height="91dp"
            android:text="@string/btn_spy"
            app:layout_constraintBottom_toTopOf="@+id/button5"
            app:layout_constraintEnd_toStartOf="@+id/button4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button1" />

        <Button
            android:id="@+id/button4"
            style="@style/button_style"
            android:layout_width="132dp"
            android:layout_height="91dp"
            android:text="@string/btn_badd"
            app:layout_constraintBottom_toTopOf="@+id/button6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button3"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <Button
            android:id="@+id/button5"
            style="@style/button_style"
            android:layout_width="132dp"
            android:layout_height="91dp"
            android:text="@string/btn_good"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintEnd_toStartOf="@+id/button6"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3" />

        <Button
            android:id="@+id/button6"
            style="@style/button_style"
            android:layout_width="132dp"
            android:layout_height="91dp"
            android:text="@string/btn_meFriend"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button5"
            app:layout_constraintTop_toBottomOf="@+id/button4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>