<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="badFriendList"
            type="com.example.floating.BadFriendListViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8CAEF6"
    tools:context=".BadFriendList">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:text="@string/badList_head"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bad_des"
        android:layout_width="224dp"
        android:layout_height="161dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="60dp"
        android:paddingStart="30dp"
        android:paddingEnd="16dp"
        android:paddingBottom="10dp"
        android:text="@string/badList_des"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/add_bad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/add_bad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="20dp"
        android:paddingTop="10dp"
        android:text="@string/btn_add"
        android:textColor="#1230EA"
        app:layout_constraintBottom_toTopOf="@+id/clear_bad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/clear_bad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="36dp"
        android:onClick="@{() -> badFriendList.onClear()}"
        android:text="@string/btn_clear"
        android:textColor="#1230EA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bad_des"
        app:layout_constraintTop_toBottomOf="@+id/add_bad" />

    <EditText
        android:id="@+id/naam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/add_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bad_des" />

    <TextView
        android:id="@+id/kaam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@{badFriendList.namesString}"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/naam" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>