<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PotterSto">

    <TextView
        android:id="@+id/pothead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/potthead"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/pothead"
        tools:layout_editor_absoluteX="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="232dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:src="@drawable/pottersto1" />

            <TextView
                android:id="@+id/quotePot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="40dp"
                android:paddingTop="20dp"
                android:paddingEnd="40dp"
                android:paddingBottom="20dp"
                android:text="@string/pott_quote"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/pottsto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="60dp"
                android:text="@string/potsto"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>