<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".JudySto">

        <TextView
            android:id="@+id/judHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/judyHead"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/judHead"
            tools:layout_editor_absoluteX="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:paddingTop="15dp"
                    app:srcCompat="@drawable/judyy" />

                <TextView
                    android:id="@+id/quoteJud"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="40dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="40dp"
                    android:paddingBottom="20dp"
                    android:text="@string/judy_quote"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/judyysto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingEnd="1dp"
                    android:paddingBottom="60dp"
                    android:text="@string/judysto"
                    android:textSize="16sp" />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>